--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Webjeda Cards is a Bootstrap based jekyll theme for portfolio, photography or any kind of blog.
   
   
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl:
 url: "https://sks9798.github.io" # the base hostname & protocol for your site
 
 #sidebar
